Move ImageLoader class to Utils

--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="texture/|texture/darkDimension/|texture/fireball/|texture/ice_shard/|texture/minion/bigBlob/|texture/minion/evilWizard/|texture/minion/smallBlob/|texture/normal_blast/|worlds/" kind="src" path="res"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
